<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">照片分享</string>
    <string name="app_title">(%1$d)</string>
    <string name="app_title_null"></string>

    <string name="action_share">分享</string>
    <string name="action_bucket">照片分类</string>
    <string name="action_share_record">分享记录</string>
    <string name="text_image_count">(%1$d)</string>

    <string name="mobile_hint">输入手机号码</string>
    <string name="pwd_hint">输入密码</string>
    <string name="nickname_hint">输入昵称</string>
    <string name="login_prompt">登录</string>
    <string name="register_prompt">注册</string>
    <string name="mobile_is_not_null">手机号码不能为空</string>
    <string name="pwd_is_not_null">密码不能为空</string>
    <string name="nickname_is_not_null">昵称不能为空</string>
    <string name="login_fail">登录失败</string>

    <string name="delete_success">删除成功</string>
    <string name="delete_msg">您确定要删除这条数据吗?</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="no_photo">没有照片可分享</string>
    <string name="choose_limit_nine">你最多只能选择9张图片</string>

    <!-- Filter names -->
    <string name="filter_original">Original</string>
    <string name="filter_instafix">Instafix</string>
    <string name="filter_ansel">Ansel</string>
    <string name="filter_testino">Testino</string>
    <string name="filter_xpro">XPro</string>
    <string name="filter_bw">Black &amp; White</string>
    <string name="filter_sepia">Sepia</string>
    <string name="filter_cyano">Cyano</string>
    <string name="filter_retro">Retro</string>
    <string name="filter_georgia">Georgia</string>
    <string name="filter_sahara">Sahara</string>
    <string name="filter_hdr">HDR</string>

    <string name="photo_effects">效果</string>
    <string name="photo_caption">Caption</string>
    <string name="photo_rotate">旋转</string>
    <string name="photo_crop">裁剪</string>
    <string name="photo_reset">清除</string>
    <string name="share_prompt">分享点新鲜事儿...</string>
    <array name="share_keys">
        <item>SinaWeibo</item>
        <item>WebChatMoments</item>
    </array>

    <string name="detecting_faces">Loading Faces</string>
    <string name="edit_photo">编辑图片</string>

    <string name="sina_weibo">新浪微博</string>
    <string name="WebChat_Moments">微信朋友圈</string>

    <string name="sina_weibo_exception">需要安装新浪微博客户端</string>
    <string name="WebChat_Moments_exception">需要安装微信户端</string>
    <string name="cancel_prompt">取 消</string>


    <!-- 环信 -->
    <string name="Application_and_notify">invitation and notification</string>
    <string name="group_chat">group chat</string>
    <string name="add_friend">add friends</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">voice</string>
    <string name="picture">[picture]</string>
    <string name="video">[video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[voice call]</string>


</resources>
