<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TintinShareActivity">
    <item
        android:id="@+id/action_bucket"
        android:icon="@android:drawable/ic_menu_more"
        android:showAsAction="ifRoom"
        android:title="@string/action_bucket"
        android:visible="false" />
    <item
        android:id="@+id/action_share"
        android:actionLayout="@layout/layout_action_share"
        android:showAsAction="ifRoom"
        android:title="@string/action_share"
        android:visible="false" />
    <!--android:icon="@drawable/abc_ic_menu_moreoverflow_normal_holo_dark"-->
    <item
        android:id="@+id/action_share_record"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/action_share_record"
        android:visible="false" />
</menu>

